# fchain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  serve-docs.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/api/: docs.rs  handlers.rs  mod.rs  router.rs
src/api/handlers/: blocks.rs  chain.rs  common.rs  mod.rs  transactions.rs
src/blockchain/: block.rs  blockchain.rs  chain.rs  crypto.rs  mod.rs  transaction.rs  wallet.rs
tests/: api_tests.rs  blockchain_tests.rs
tests/api/: mod.rs  routes.rs
