[package]
name = "fchain"
version = "0.1.0"
edition = "2021"
authors = ["Blockchain Developer"]
description = "A simple blockchain implementation in Rust"

[dependencies]
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.0"
rand = "0.8"

# HTTP API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1.0", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# Async
tokio = { version = "1.34", features = ["full"] }

[dev-dependencies]
# Testing
assert_matches = "1.5"
axum-test = "14.0"
tokio-test = "0.4"
serde_json = "1.0"
http = "1.0"
